--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Duck Form</title>
   </head>
-  <body></body>
+  <body>
+    <form action="#" method="post">
+      <div>
+        <label for="fullname">full name</label>
+        <input type="text" name="fullname" id="fullname" />
+      </div>
+      <div>
+        <label for="email">email</label>
+        <input type="email" name="email" id="email" />
+      </div>
+      <div>
+        <label for="message-dropdown">message regarding</label>
+        <select name="regarding" id="message-dropdown">
+          <option value=""></option>
+          <option value="regards">HTML</option>
+          <option value="regards">CSS</option>
+          <option value="regards">JavaScript</option>
+        </select>
+      </div>
+      <div class="message-text">
+        <label for="message">message</label>
+        <textarea name="message" id="message" cols="25" rows="2"></textarea>
+      </div>
+    </form>
+  </body>
 </html>
