--- a/index.html
+++ b/index.html
@@ -21,28 +21,42 @@
     <title>Duck Form</title>
   </head>
   <body>
-    <form action="#" method="post">
-      <div>
-        <label for="fullname">full name</label>
-        <input type="text" name="fullname" id="fullname" />
+    <main>
+      <div class="form-container">
+        <div class="form-content">
+          <form action="#" method="post">
+            <label for="fullname">full name</label>
+            <input type="text" name="fullname" id="fullname" />
+
+            <label for="email">email</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Your Email"
+            />
+
+            <label for="message">message regarding</label>
+            <input type="text" name="message" id="message" />
+
+            <label for="user-message">message</label>
+            <textarea
+              name="user-message"
+              id="message"
+              cols="25"
+              rows="2"
+              placeholder="Your Message"
+            ></textarea>
+            <div class="form-btn">
+              <button type="submit">send message</button>
+            </div>
+          </form>
+        </div>
+        <div class="form-extension"></div>
+        <div class="form-image">
+          <img src="./img/hiclipart 2.png" alt="a yellow duck" />
+        </div>
       </div>
-      <div>
-        <label for="email">email</label>
-        <input type="email" name="email" id="email" />
-      </div>
-      <div>
-        <label for="message-dropdown">message regarding</label>
-        <select name="regarding" id="message-dropdown">
-          <option value=""></option>
-          <option value="regards">HTML</option>
-          <option value="regards">CSS</option>
-          <option value="regards">JavaScript</option>
-        </select>
-      </div>
-      <div class="message-text">
-        <label for="message">message</label>
-        <textarea name="message" id="message" cols="25" rows="2"></textarea>
-      </div>
-    </form>
+    </main>
   </body>
 </html>
