updated the form

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <label for="user-message">message</label>
             <textarea
               name="user-message"
-              id="message"
+              id="user-message"
               cols="25"
               rows="2"
               placeholder="Your Message"
